# galaxy-classification

./: .gitignore  README.md  pyproject.toml  run_pipeline.py
input/queries/: DATA7901_DR19_casjobs_merged.sql
notebooks/: 00_run_pipeline.ipynb  01_label_audit.ipynb  02_results.ipynb  explore_tables.ipynb
progress_update/: update_01_2026-03-05.md  update_02_2026-03-20.md  update_03_2026-03-20.md
scripts/: download_images.py  download_spectra.py
src/: evaluate.py  interpret.py  merge_csv.py
src/data/: clean.py  features.py  labels.py  rename.py  split.py
src/data/datasets/: image.py  multimodal.py  spectral.py
src/datasets/: image.py  multimodal.py  spectral.py
src/models/: fusion.py  image.py  spectral.py  tabular.py
src/train/: fusion.py  image.py  physical.py  spectral.py  tabular.py
src/utils/: io.py  metrics.py
